force-app/main/default/objects/sdg_Preferences__c/fields/Filters__c.field-meta.xml
<CustomField>
    <fullName>Filters__c</fullName>
    <label>Filters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>