force-app/main/default/objects/sdg_Preferences__c/fields/IsExpanded__c.field-meta.xml
<CustomField>
    <fullName>IsExpanded__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsExpanded</label>
    <type>Checkbox</type>
</CustomField>