force-app/main/default/objects/sdg_Preferences__c/fields/sdgKey__c.field-meta.xml
<CustomField>
    <fullName>sdgKey__c</fullName>
    <label>sdgKey</label>
    <length>50</length>
    <type>Text</type>
</CustomField>