force-app/main/default/objects/sdg_Preferences__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Filters__c</columns>
    <columns>sdgKey__c</columns>
    <columns>User__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>